# stm32h753zi_nuttx_officialport

./: config
apps/examples/buttons/: buttons_main.c
apps/examples/canflood/: CMakeLists.txt  Kconfig  Make.defs  Makefile  canflood_main.c
apps/examples/canio/: CMakeLists.txt  Kconfig  Make.defs  Makefile  canio_main.c
apps/examples/lcd_battery/: CMakelists.txt  Kconfig  Make.defs  Makefile  lcd_battery_main.c
nuttx/arch/arm/include/stm32h7/: chip.h
nuttx/arch/arm/src/stm32h7/: stm32_fdcan_sock.c
nuttx/boards/: Kconfig
nuttx/boards/arm/stm32h7/nucleo-h753zi/: Kconfig
nuttx/boards/arm/stm32h7/nucleo-h753zi/configs/nsh/: defconfig
nuttx/boards/arm/stm32h7/nucleo-h753zi/configs/socketcan/: defconfig
nuttx/boards/arm/stm32h7/nucleo-h753zi/include/: readme.txt
nuttx/boards/arm/stm32h7/nucleo-h753zi/src/: CMakeLists.txt  Makefile  nucleo-h753zi.h  stm32_bringup.c
nuttx/boards/arm/stm32h7/nucleo-h753zi/src/drivers/driver_bus/: stm32_i2c.c  stm32_spi.c
nuttx/boards/arm/stm32h7/nucleo-h753zi/src/drivers/driver_generic/: stm32_adc.c  stm32_buttons.c  stm32_gpio.c  stm32_pwm.c  stm32_userleds.c
nuttx/boards/arm/stm32h7/nucleo-h753zi/src/drivers/driver_middleware/: stm32_autoleds.c  stm32_composite.c  stm32_progmem.c  stm32_reset.c  stm32_romfs.h  stm32_romfs_initialize.c  stm32_uid.c  stm32_usb.c  stm32_usbmsc.c
nuttx/boards/arm/stm32h7/nucleo-h753zi/src/drivers/driver_modules/: stm32_lsm303agr.c  stm32_lsm6dsl.c  stm32_lsm9ds1.c  stm32_mfrc522.c  stm32_mmcsd.c  stm32_nrf24l01.c  stm32_pca9635.c  stm32_ssd1306.c  stm32_st7796.c
nuttx/drivers/lcd/: st7796.c
nuttx/include/nuttx/lcd/: st7796.h
